  * debian/control:
    - add apt-clone to the build-depends
  * DistUpgrade/DistUpgradePatcher.py:
    - add native ed-style patch implementation as e.g. chroots
      may not have ed installed and its critical to be able to 
      ensure that pycompile is correct before the upgrade starts
  * do-release-upgrade:
    - use apt.progress.text.AcquireProgress to fix deprecation warning

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 29 Mar 2011 16:52:12 +0200

update-manager (1:0.146.6) natty; urgency=low

  * DistUpgrade/DevelReleaseAnnouncement:
    - fix description to say "BETA"
  * pre-build.sh:
    - cleanup cruft test leftover output

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 29 Mar 2011 16:45:29 +0200

update-manager (1:0.146.5) natty; urgency=low

  * fix FTBFS by including a apt_clone.py copy until apt-clone
    makes it through NEW

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 15 Mar 2011 20:54:30 +0100

update-manager (1:0.146.4) natty; urgency=low

  * DistUpgrade/DistUpgradeMain.py, DistUpgrade/apt_clone.py: 
    Use apt-clone to create system-state instead of custom one
    (apt-clone_system_state.tar.gz)
    This makes reproducing problems a lot easier as apt-clone restore
    <statefile> can be used. It also means that ubiquity can pick up
    failed upgrades from the state file and finish them.

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 15 Mar 2011 16:05:11 +0100

update-manager (1:0.146.3) natty; urgency=low

  * DistUpgrade/DistUpgradeAptCdrom.py, DistUpgrade/DistUpgradeController.py:
    - comment out cdrom source after alternative CD based upgrade
  * DistUpgrade/DistUpgradeController.py:
    - show error message when cdrom fails to add
  * tests/test_cdrom.py:
    - add test for cdrom commenting

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 09 Mar 2011 16:19:21 +0100

update-manager (1:0.146.2) natty; urgency=low

  [ Michael Vogt ]
  *  data/glade/UpdateManager.ui, UpdateManager/UpdateManager.py: