@@ -96,7 +96,7 @@ if __name__ == "__main__":
     
     # get a cache
     cache = apt.Cache(rootdir=os.path.abspath(aptbasedir))
-    cache.update(apt.progress.TextFetchProgress())
+    cache.update(apt.progress.text.AcquireProgress())
     cache.open(apt.progress.OpProgress())
 
     # now test if we can install stuff
