@@ -15,6 +15,9 @@ update-manager (1:0.147) UNRELEASEDnatty; urgency=low
       ensure that pycompile is correct before the upgrade starts
   * do-release-upgrade:
     - use apt.progress.text.AcquireProgress to fix deprecation warning
+  * DistUpgrade/DistUpgradeViewText.py:
+    - fix deprecation warning (LP: #744990)
+  * fix deprecation warnings in auxiliary scripts
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 29 Mar 2011 16:52:12 +0200
 
